# sellyEvi_SERVER/swagger.yml
@@ -1,13 +1,13 @@
-swagger: '2.0'
+openapi: 3.0.0
 info:
-  version: 1.0.0
   title: Selly Evi | E-commerce API
-  description: API documentation for Selly Evi, an E-commerce API
+  description: API documentation for Selly Evi, a fictional E-commerce API
   contact:
     name: TYNIP | Arturo Morales
     url: https://artmoram.com/
-basePath: /
-servers: /
+  version: 1.0.0
+servers:
+  - url: http://localhost:3000
 tags:
   - name: Authentication
     description: Operations related to user authentication
@@ -21,21 +21,121 @@ tags:
     description: Operations related to user management
 paths:
   /auth/register:
-    get:
-      tags:
-        - Authentication
-      summary: Sign up user
+    post:
+      summary: Register a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterUserInput'
       responses:
         '200':
-          description: User signed up successfully
+          description: User registration successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - Authentication
   /auth/login:
-    get:
-      tags:
-        - Authentication
-      summary: Log in user
+    post:
+      summary: Login with username and password
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginInput'
       responses:
         '200':
-          description: User logged in successfully
+          description: User login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - Authentication
+  /auth/google:
+    get:
+      summary: Login with Google
+      responses:
+        '200':
+          description: User login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - Authentication
+  /auth/logged_in:
+    get:
+      summary: Check if user is logged in
+      responses:
+        '200':
+          description: User is logged in
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoggedInResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - Authentication
+  /auth/logout:
+    get:
+      summary: Logout user
+      responses:
+        '200':
+          description: User logged out successfully
+        '5XX':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags:
+        - Authentication
   /carts/cart:
     get:
       tags:
@@ -166,6 +266,127 @@ paths:
       responses:
         '200':
           description: User info updated successfully
+components:
+  schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+        email:
+          type: string
+        firstname:
+          type: string
+        lastname:
+          type: string
+      required:
+        - email
+        - firstname
+        - lastname
+
+    Product:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        description:
+          type: string
+        price:
+          type: number
+      required:
+        - name
+        - price
+
+    Cart:
+      type: object
+      properties:
+        id:
+          type: integer
+        userId:
+          type: integer
+        created:
+          type: string
+        modified:
+          type: string
+        converted:
+          type: string
+        isActive:
+          type: boolean
+      required:
+        - userId
+
+    CartItem:
+      type: object
+      properties:
+        id:
+          type: integer
+        productId:
+          type: integer
+        cartId:
+          type: integer
+        quantity:
+          type: integer
+        price:
+          type: number
+      required:
+        - productId
+        - cartId
+        - quantity
+        - price
+
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+        total:
+          type: number
+        status:
+          type: string
+        userId:
+          type: integer
+        created:
+          type: string
+        modified:
+          type: string
+      required:
+        - total
+        - status
+        - userId
+
+    OrderItem:
+      type: object
+      properties:
+        id:
+          type: integer
+        quantity:
+          type: integer
+        orderId:
+          type: integer
+        productId:
+          type: integer
+        price:
+          type: number
+      required:
+        - quantity
+        - orderId
+        - productId
+        - price
+
+  securitySchemes:
+    BasicAuth:
+      type: http
+      scheme: basic
+    BearerAuth:
+      type: http
+      scheme: bearer
+
+  security:
+    - BasicAuth: []
+    - BearerAuth: []
+
 definitions:
   CartItem:
     type: object
